# wuilusai

./: .gitignore  README.md  STM32原生USB_CDC使用与测试说明.md  capture_orbbec_rgb.py
docs/: 步进控制调用示例.md  视觉系统从采集到分类详解.md  龙门步进控制从底层到上层详解.md
firmware/bjdj/: bjdj.ioc
firmware/bjdj/Core/Inc/: main.h  tim.h
firmware/bjdj/Core/Src/: gpio.c  main.c  stm32f1xx_it.c  tim.c
firmware/bjdj/MDK-ARM/: bjdj.uvguix.Z  bjdj.uvoptx  bjdj.uvprojx  startup_stm32f103xe.lst
firmware/bjdj/MDK-ARM/RTE/_bjdj/: RTE_Components.h
ros2_ws/src/ros_robot_controller-ros2/src/ros_robot_controller/ros_robot_controller/: change_servo_id.py  ros_robot_controller_node.py  ros_robot_controller_sdk.py
ros2_ws/src/wuliusai_competition_demo/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/wuliusai_competition_demo/config/: competition_demo.yaml
ros2_ws/src/wuliusai_competition_demo/launch/: competition_demo.launch.py  competition_system.launch.py
ros2_ws/src/wuliusai_competition_demo/resource/: wuliusai_competition_demo
ros2_ws/src/wuliusai_competition_demo/test/: test_calibration.py
ros2_ws/src/wuliusai_competition_demo/wuliusai_competition_demo/: __init__.py  calibrate_field.py  calibration.py  node.py  send_task.py  vision_pipeline.py
ros2_ws/src/wuliusai_stepper_controller/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/wuliusai_stepper_controller/config/: stepper_controller.yaml  yz_controller.yaml
ros2_ws/src/wuliusai_stepper_controller/launch/: stepper_controller.launch.py  yz_controller.launch.py
ros2_ws/src/wuliusai_stepper_controller/test/: test_protocol.py
ros2_ws/src/wuliusai_stepper_controller/wuliusai_stepper_controller/: __init__.py  node.py  protocol.py  serial_test.py
ros2_ws/src/wuliusai_stepper_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/wuliusai_stepper_msgs/action/: ExecuteScoop.action  MoveAxis.action  MoveGantry.action
ros2_ws/src/wuliusai_stepper_msgs/msg/: StepperState.msg
ros2_ws/src/wuliusai_stepper_msgs/srv/: SetAxisZero.srv  StopAxis.srv
scripts/: 99-wuliusai-stepper.rules  99-wuliusai-stepper.rules.example  capture_camera.sh  jetson_check_devices.sh  jetson_env.sh  jetson_start_competition_demo.sh  jetson_start_stepper.sh  set_hx35hm_id.py  stepper_test_common.py  test_gantry_sync.py  test_hx35hm_rotation.py  test_single_stepper.py  test_stepper_communication.py  test_xz_three_motor_sync.py
vision/: README.md  build_color_prototypes.py  calibrate_rois.py  capture_calibration_image.py  capture_vision_rgb.py  feature_model.py  label_dataset_groups.py  label_dataset_web.py  requirements.txt  run_box_vision.py  run_vision.sh  run_vision_pc.sh  run_vision_test.sh  test_vision_system.py  train_bean_classifier.py
vision/config/: boxes.example.yaml  boxes.yaml
vision/data/: labels.yaml
vision/models/: bean_classifier.joblib
vision/output/: cross_validation.json
(+1 files in other folders)
