<?xml version="1.0"?>
<package format="3">
  <name>wuliusai_competition_demo</name>
  <version>0.1.0</version>
  <description>Competition single-scoop perception and gantry orchestration demo.</description>
  <maintainer email="rog@example.com">rog</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>wuliusai_stepper_msgs</exec_depend>
  <exec_depend>wuliusai_stepper_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <test_depend>ament_pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
