<?xml version="1.0"?>
<package format="3">
  <name>wuliusai_stepper_controller</name>
  <version>0.1.0</version>
  <description>ROS 2 serial bridge for the Wuliusai STM32 dual stepper controller.</description>
  <maintainer email="rog@example.com">rog</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>wuliusai_stepper_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
