<?xml version="1.0"?>
<package format="3">
  <name>wuliusai_stepper_msgs</name>
  <version>0.1.0</version>
  <description>ROS 2 interfaces for the Wuliusai two-axis stepper controller.</description>
  <maintainer email="rog@example.com">rog</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
